# rentry-rs

./: Cargo.toml  FEATURES.md  README.md
database/: 000012.sst  000017.sst  000022.sst  IDENTITY  LOG  LOG.old.1709590053012342  LOG.old.1709590059885931  LOG.old.1709590080877789  LOG.old.1709590154143442  MANIFEST-000024  OPTIONS-000021
src/: db.rs  errors.rs  main.rs  models.rs  pages.rs  services.rs  validators.rs
src/routes/: api.rs  frontend.rs  mod.rs
src/services/: mod.rs
static/: apiClient.js  base.html  dark.css  index.html  light.css  retro.css  style.css
templates/: 404.html  admin.html  base.html  error.html  index.html  preview.html
