[package]
name = "rentry-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.3.0"
axum = "0.7.4"
base64 = "0.22.0"
hex = "0.4.3"
markdown = "0.3.0"
md5 = "0.7.0"
mongodb = "2.8.1"
nanoid = "0.4.0"
pulldown-cmark = "0.10.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
