[package]
name = "rentry-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.3.0"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.4"
base64 = "0.22.0"
bincode = "1.3.3"
blake3 = "1.5.0"
chrono = { version = "0.4.34", features = ["serde"] }
env_logger = "0.11.3"
hex = "0.4.3"
# jemallocator = "0.5.4"
log = "0.4.21"
md5 = "0.7.0"
nanoid = "0.4.0"
pulldown-cmark = "0.10.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
sled = { version = "0.34.7", features = ["compression"] }
syntect = "5.2.0"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }

[dev-dependencies]
tempfile = "3.10.1"
